--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,10 @@ body{margin:0;font-family:Verdana,Serif;height:100%;width:100%;position:absolute
 #tituloPrincipal{font-size:18px;float:left;width:auto;padding:10px;}
 #tituloDer{font-size:14px;float:right;width:auto;padding:10px;}
 #contenidoPrincipal{margin:2px;border:1px solid #CCC;width:99.5%;height:91.5%;background:#F0F0F0;}
-#contenedorLogIn{float:left;width:60%;border:1px solid #CCC;background:#FFF;height:92%;margin:5px;}
+#contenedorLogIn{float:left;width:59%;border:1px solid #CCC;background:#FFF;height:92%;margin:5px;}
 #contenedorLogInDer{float:right;width:38%;border:1px solid #CCC;background:#FFF;height:92%;margin:5px;text-align:center;}
 #barraPie{float:left;margin:1px 5px 2px 5px;width:98.3%;padding:5px;font-size:14px;border:1px solid #CCC;background:#FFF;height:17px;text-align:center;font-size:10px;}
+#erroresLogIn{margin:20px 5px 10px 5px;font-size:12px;color:#FF0000;height:15px;padding:15px;text-align:center;border-top:1px solid #CCC;border-bottom:1px solid #CCC;background:#F0F0F0;}
+#contenedorForm{}
+
 
