Actualizacion de Archivos y manejo de Acceso

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,10 +5,20 @@ body{margin:0;font-family:Verdana,Serif;height:100%;width:100%;position:absolute
 #tituloPrincipal{font-size:18px;float:left;width:auto;padding:10px;}
 #tituloDer{font-size:14px;float:right;width:auto;padding:10px;}
 #contenidoPrincipal{margin:2px;border:1px solid #CCC;width:99.5%;height:91.5%;background:#F0F0F0;}
-#contenedorLogIn{float:left;width:59%;border:1px solid #CCC;background:#FFF;height:92%;margin:5px;}
+#contenedorLogIn{float:left;width:59%;border:1px solid #CCC;background:#FFF;/*height:92%;*/margin:5px;}
 #contenedorLogInDer{float:right;width:38%;border:1px solid #CCC;background:#FFF;height:92%;margin:5px;text-align:center;}
 #barraPie{float:left;margin:1px 5px 2px 5px;width:98.3%;padding:5px;font-size:14px;border:1px solid #CCC;background:#FFF;height:17px;text-align:center;font-size:10px;}
-#erroresLogIn{margin:20px 5px 10px 5px;font-size:12px;color:#FF0000;height:15px;padding:15px;text-align:center;border-top:1px solid #CCC;border-bottom:1px solid #CCC;background:#F0F0F0;}
+#erroresLogIn{display: none;margin:20px 5px 10px 5px;font-size:12px;color:#FF0000;height:15px;padding:15px;text-align:left;border-top:1px solid #CCC;border-bottom:1px solid #CCC;background:#F0F0F0;}
 #contenedorForm{text-align:center;}
-
-
+#contenedorLoginPrincipal{overflow: hidden;height: 200px;width: 500px;border: 1px solid #CCC;background: #FFF;margin: 20 auto 0 auto;}
+#contenedorLoginTexto{float: left;height: 186px;border: 0px solid #CCC;width: 120px;margin: 5px;}
+#contenedorLoginCajas{float: left;height: 186px;border: 0px solid #CCC;width: 340px;margin: 5px;}
+#texto1{margin-top: 55px;font-size: 18px;}
+#texto2{margin-top: 30px;font-size: 18px;}
+#caja1{margin-top: 50px;font-size: 18px; text-align: left;margin-left: 5px;}
+#caja2{margin-top: 20px;font-size: 18px; text-align: left;margin-left: 5px;}
+#txtCajaUsuario{font-size: 22px;width: 320px;text-align: center;}
+#txtCajaPassword{font-size: 22px;width: 320px;text-align: center;}
+#divBotonEntrar{height: 40px;padding: 10px;border: 0px solid #CCC;margin:10px;}
+#botonEntrar{height: 40px;width: 120px;}
+#tituloDatos{text-align: left;height: 20px;border-bottom: 1px solid #333;padding: 10px;margin:10px;}
