--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,12 +36,12 @@ body{margin:0;font-family:Verdana,Serif;height:100%;width:100%;position:absolute
 .estiloMenusImg:hover{background: url(img/desv.png) repeat;cursor: pointer;}
 .opcionesCuadroImgMenu{border: 1px solid #FFF;width: 365px;height: 100px;float: left;margin: 10px;}
 .opcionesCuadroImgMenu:hover{border: 1px solid #CCC;background: #e1e1e1;cursor: pointer;font-weight: bold;}
-.opcionesCuadroTituloImgMenu{border: 1px solid #000;float: left;margin: 15px;font-size: 12px;}
+.opcionesCuadroTituloImgMenu{border: 0px solid #000;float: left;margin: 15px;font-size: 12px;}
 .usuariosConectadosActual{border-bottom:1px solid #CCC;height:15px;padding:5px;font-size:10px;margin:0;}
 .usuariosConectadosActual:hover{background: #f0f0f0;}
 /*capa de los mensajes*/
-#capaMensaje{display: block;position: absolute;width: 100%;height: 100%;background: url(../img/desv.png) repeat;z-index: 9999999999;top: 0;}
+#capaMensaje{display: none;position: absolute;width: 100%;height: 100%;background: url(../img/desv.png) repeat;z-index: 9999999999;top: 0;}
 .estiloCapaMensaje{border: 1px solid #666;position: absolute;width: 400px;height: 250px;left: 50%;top: 50%;margin-left: -200px;margin-top: -125px;}
 .mensajeCapa{height: 15px;padding: 5px;width: 390px;background: #222;font-size: 12px;color: #FFF;}
-.estiloCapaMensaje{background: #FFF;width: 400px;height: 224px;overflow: auto;}
+.estiloCapaMensaje1{background: #FFF;width: 400px;height: 224px;overflow: auto;}
 .estiloPara{margin: 10px;font-size: 12px;}
