--- a/css/estilos.css
+++ b/css/estilos.css
@@ -63,3 +63,6 @@ body{margin:0;font-family:Verdana,Serif;height:100%;width:100%;position:absolute
 #frmContenedorBug{position:absolute;width:400px;height:270px;right:-3px;border:1px solid #000;background:#f0f0f0;bottom:26px;display:none;font-size: 10px;}
 #divFormularioBug{background:#FFF;border:1px solid #CCC;margin:2px;width:98%;height:98%;overflow:auto;font-size: 10px;}
 .estiloCargadorApp{position: absolute;text-align: right;font-weight: bold;border: 1px solid #000;background: #CCC;height: 17px;padding: 3px;width: 120px;right: 129px;margin-top: 1px;}
+/*estilos Titulo Apps*/
+.estiloAppInfo{border-bottom: 1px solid #666;height: 70px;width: 85%;margin: 5px 5px 10px 10px;}
+.estiloAppInfo:hover{border-left: 5px solid #666;cursor: pointer;}
