--- a/css/estilos.css
+++ b/css/estilos.css
@@ -66,3 +66,92 @@ body{margin:0;font-family:Verdana,Serif;height:100%;width:100%;position:absolute
 /*estilos Titulo Apps*/
 .estiloAppInfo{border-bottom: 0px solid #999;height: 70px;width: 85%;margin: 5px 5px 10px 10px;}
 .estiloAppInfo:hover{border-left: 5px solid #666;cursor: pointer;}
+.tablita{
+    border-collapse: collapse;
+    border-spacing: 5px;
+    border: 4px solid  #F0F0f0;
+    text-align: center;
+    font-size: 10px;
+    background: #FFF;
+    empty-cells: hide;
+    width: 100%;
+}
+tfoot{
+    height: 10px;
+}
+caption{
+    background: #F0F0f0;
+    font-size: 12px;
+    color: #49AE4C;
+    -moz-border-radius: 10px 10px 0px 0px; /* Firefox */
+    -webkit-border-radius: 10px 10px 0px 0px; /* Google Chrome y Safari */
+    border-radius: 10px 10px 0px 0px; /* CSS3 (Opera 10.5, IE 9 y estándar a ser soportado por todos los futuros navegadores) */
+}
+tr.enlace:hover {
+    text-decoration: none;
+    background: #77AADD;/*#77AADD*/
+}
+tr.enlace {
+    height: 25px;
+    border: 1px solid #F0F0f0;
+    color: #000;/*#0000D9
+    text-decoration: none;*/
+}
+.titulo{
+    font-family: "Palatino", "Times New Roman", sans-serif;
+    font-size: xx-large;
+    color: #49AE4C;
+}
+.location{
+    font-family: "Palatino", "Times New Roman", sans-serif;
+    font-size: x-large;
+    color: #49AE4C;
+}
+.pesta{
+    height: 40px;
+    width: 99%;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: left;
+}
+.on{
+    background: #FFF ;
+    border-style: inset;
+    border-right: 1 #fff;
+    z-index: 100;
+    /*width: 99%;*/
+}
+.off{
+    background-color: #cccccc;
+    border: 1px solid #f0f0f0;
+    z-index: 0;
+}
+.ins{
+    font-family: "Palatino", "Times New Roman", sans-serif;
+    font-size: large;
+    text-align: justify;
+    color: #000;
+}
+.tablita2{
+    border-collapse: collapse;
+    border-spacing: 5px;
+    border: 0px solid  #F0F0f0;
+    text-align: center;
+    font-size: 10px;
+    background: #FFf;
+    empty-cells: hide;
+    width: 100%;
+}
+.tablita2 tr:nth-child(2n+1) {
+background-color:  #EEEEEE;
+}
+.tablita2 th{
+    background: #49AE4C;
+    color: #FFF;
+    height: 30px;
+    -moz-border-radius: 10px 10px 0px 0px; /* Firefox */
+    -webkit-border-radius: 10px 10px 0px 0px; /* Google Chrome y Safari */
+    border-radius: 10px 10px 0px 0px; /* CSS3 (Opera 10.5, IE 9 y estándar a ser soportado por todos los futuros navegadores) */
+}
+
